# standaloneSWUpdate

./: .gitmodules  CMakeLists.txt  Findswupdate.cmake  README.md  test.json  workspace  workspace.cpp  workspaceA.cpp  workspaceB.cpp
swupdate_poc/: main.cc
